--- a/main.html
+++ b/main.html
@@ -1,21 +1,17 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-  <blockquote>
-    <p class="questions">1.Who was the first female to become the governer of an Indian state?</p>
-    <p class="questions">2.Who among first women to climb Mount Everest twice?</p>
-    <p class="questions">3.Who is President of India?</p>
-  </blockquote>
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
-</html>
+<ol>
+		<li type="1">
+			<blockquote class="questions">
+				<p>Who was the first female to become the governor of an Indian state?</p>
+			</blockquote>
+		</li>
+		<li type="1">
+			<blockquote class="questions">
+				<p>Who among first Woman to climb Mount Everest twice?</p>
+			</blockquote>
+		</li>
+		<li type="1">
+			<blockquote class="questions">
+				<p>Who is President of India?</p>
+			</blockquote>
+		</li>
+	</ol>
