--- a/main.html
+++ b/main.html
@@ -1,17 +1,31 @@
-<ol>
-		<li type="1">
-			<blockquote class="questions">
-				<p>Who was the first female to become the governor of an Indian state?</p>
-			</blockquote>
-		</li>
-		<li type="1">
-			<blockquote class="questions">
-				<p>Who among first Woman to climb Mount Everest twice?</p>
-			</blockquote>
-		</li>
-		<li type="1">
-			<blockquote class="questions">
-				<p>Who is President of India?</p>
-			</blockquote>
-		</li>
-	</ol>
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body>
+    <!-- the entire body must be written by student -->
+    <ol>
+      <li type="1">
+        <blockquote class="questions">
+          <p>
+            Who was the first female to become the governor of an Indian state?
+          </p>
+        </blockquote>
+      </li>
+      <li type="1">
+        <blockquote class="questions">
+          <p>Who among first Woman to climb Mount Everest twice?</p>
+        </blockquote>
+      </li>
+      <li type="1">
+        <blockquote class="questions">
+          <p>Who is President of India?</p>
+        </blockquote>
+      </li>
+    </ol>
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
+</html>
